--- a/views/newrequest.ejs
+++ b/views/newrequest.ejs
@@ -15,7 +15,7 @@
     <label for="dateevent">Date</label>
     <input  class="date" id="datepicker" type="dateTime" name="dateevent">
     <label for="price">Price</label>
-    <input class="price" type="number"  placeholder="€" size="10" name="price"> €
+    <input class="price" type="number" size="10" name="price"> €
     <label for="rate">Rate</label>
     <select name="rate">
     	<option value="">---</option>
@@ -23,7 +23,7 @@
     	<option value="perhour">per hour</option>
     </select>
     <label for="description">Description</label>
-    <textarea name="description"  placeholder="Please provide a description of the service you are looking for" required></textarea>
+    <textarea name="description" rows="5" placeholder="Please provide a description of the service you are looking for" required></textarea>
     <p><input class="button" type="submit" value="Submit"></p>
 </form>
 
