--- a/views/css/main.css
+++ b/views/css/main.css
@@ -104,6 +104,15 @@ h1 {
 	padding: 10px;
 }
 
+.confirm-delete {
+	display: inline-block;
+	padding: 15px;
+	background-color: #FFA4A4;
+	color: #B42020;
+	display: none;
+	border-radius: 5px;
+}
+
 input[type="submit"]{
 	border: 0px;
 	background-color: #417143;	
