--- a/views/head.ejs
+++ b/views/head.ejs
@@ -17,7 +17,7 @@
 <body>
 <header>
 	<h1>Help Expat Berlin</h1>
-	<nav>
+	<nav id="realnav">
 		<a href="/">Home</a>
 		<% if (user) { %>
 		<a href="/request/new">New request</a>
@@ -27,6 +27,7 @@
 		<a href="/auth/account-login">Log in</a>
 		<% } %>
 	</nav>
+	<div id="burger"><img src="/images/burger.png" width ="30px"></div>
 	<% if (errorMessage) { %> <div class="error-banner">Error: <%= errorMessage %></div><% } %>
 	<% if (alertMessage) { %> <div class="alert-banner"><%= alertMessage %></div><% } %>
 </header>
@@ -39,12 +40,10 @@
 		<% if (user) { %>
 		<a href="/request/new">New request</a>
 		<a href='/auth/profile/<%= user.id %>?tab=profile'>Profile</a>
-		<a href="/auth/logout">Logout</a>
 		<% } %>
 		<% if (!user) { %>
 		<a href="/auth/account-login">Log in</a>
 		<% } %>
-		<a href="/auth/showall">All users</a>
 	</nav>
 	<% if (errorMessage) { %> <div class="error-banner">&nbsp;</div><% } %>
 	<% if (alertMessage) { %> <div class="alert-banner">&nbsp;</div><% } %>
