--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,33 +6,43 @@
 	const userPrice = user ? user.myfilters.filter.price : "";
 	const userDate = user ? user.myfilters.sort.datePosted : "";
 	const userType = user ? user.myfilters.filter.type : "";
+	const userLocation = user ? user.myfilters.filter.location : "";
+
+	const locations = ['Any', 'Charlottenburg', 'Friedrichshain', 'Kreuzberg', 'Lichtenberg', 'Mitte', 'Neuköln', 'Prenzlauer Berg', 'Shöneberg', 'Wedding', 'Other'];
+	const types = ['Any', 'On site Assistance', 'Translation', 'Phone Call', 'Other'];
  %>
 
 	<form id="filters-form">
 		<div class="inline-filter">
-	    <label for="paid">Fee</label>
-	    <select name="paid">
+	    <label class="small" for="paid">Fee</label>
+	    <select class="small"name="paid">
 		    <option value="all" <% if (userPrice === 'all') { %> selected <% } %> >Any</option>
 		    <option value="paid" <% if (userPrice === 'paid') { %> selected <% } %> >Paid</option>
 		    <option value="free" <% if (userPrice === 'free') { %> selected <% } %> >Free</option>
 	    </select>
 	    </div>
 		<div class="inline-filter">
-	    <label for="date">Order by</label>
-	    <select name="date">
+	    <label class="small" for="date">Order by</label>
+	    <select class="small"name="date">
 		    <option value="-1" <% if (userDate === -1) { %> selected <% } %> >Newest</option>
 		    <option value="1" <% if (userDate === 1) { %> selected <% } %> >Oldest</option>
 	    </select>
 	    </div>
 		<div class="inline-filter">
-	    <label for="type">Type</label>
-	    <select name="type">
-		    <option value="all" <% if (userType === 'all') { %> selected <% } %> >Any</option>
-		    <option value="On site Assistance" <% if (userType === 'On site Assistance') { %> selected <% } %> >On site Assistance</option>
-		    <option value="Translation" <% if (userType === 'Translation') { %> selected <% } %> >Translation</option>
-		    <option value="Phone Call" <% if (userType === 'Phone Call') { %> selected <% } %> >Phone Call</option>
-		    <option value="Other" <% if (userType === 'Other') { %> selected <% } %> >Other</option>
-	    </select>
+		    <label class="small" for="type">Type</label>
+		    <select class="small"name="type">
+		    	<% types.forEach((type) => { %>
+		    		<option value='<%= type %>' <% if (userType === type) { %> selected <% } %> ><%= type %></option>
+		    	<% }); %>
+		    </select>
+	    </div>
+		<div class="inline-filter">
+		    <label class="small" for="location">Area</label>
+		    <select class="small" name="location" required>
+		    	<% locations.forEach((location) => { %>
+		    		<option value='<%= location %>' <% if (userLocation === location) { %> selected <% } %> ><%= location %></option>
+		    	<% }); %>
+		    </select>
 	    </div>
 	</form>
 
