--- a/views/newrequest.ejs
+++ b/views/newrequest.ejs
@@ -4,11 +4,25 @@
     <h2>Post a new request</h2>
     <label for="type">Type</label>
     <select name="type" required>
-    	<option value="">---</option>
-    	<option value="On site Assistance">On site Assistance</option>
-    	<option value="Translation">Translation</option>
-    	<option value="Phone Call">Phone Call</option>
-    	<option value="Other">Other</option>
+        <option value="">---</option>
+        <option value="On site Assistance">On site Assistance</option>
+        <option value="Translation">Translation</option>
+        <option value="Phone Call">Phone Call</option>
+        <option value="Other">Other</option>
+    </select>
+    <label for="location">Area</label>
+    <select name="location" required>
+        <option value="">---</option>
+        <option value="Charlottenburg">Charlottenburg</option>
+        <option value="Friedrichshain">Friedrichshain</option>
+        <option value="Kreuzberg">Kreuzberg</option>
+        <option value="Lichtenberg">Lichtenberg</option>
+        <option value="Mitte">Mitte</option>
+        <option value="Neuköln">Neuköln</option>
+        <option value="Prenzlauer Berg">Prenzlauer Berg</option>
+        <option value="Shöneberg">Shöneberg</option>
+        <option value="Wedding">Wedding</option>
+        <option value="Other">Other</option>
     </select>
     <label for="title">Title</label>
     <input class="title" type="text" name="title"  maxlength="40" required>
