--- a/views/css/main.css
+++ b/views/css/main.css
@@ -106,6 +106,7 @@ h1 {
 
 .request-details-less {
 	padding: 10px;
+	padding-bottom: 0px;
 }
 
 .confirm-delete {
@@ -135,7 +136,13 @@ input[type="submit"]{
 }
 
 .button-help {
+	margin: 10px;
 	background-color: #366933;
+}
+
+.button-details {
+	background-color: #A7B296;
+	padding: 5px;
 }
 
 .button-revokehelp {
@@ -232,6 +239,14 @@ input[type="number"] {
 
 #filters-form {
 	background-color: #E6EEE0;
+	margin-bottom: 0px;
+	border-radius: 0px;
+}
+
+.tiplogin {
+	padding-top: 5px;
+	padding-bottom: 0px;
+	margin-bottom: 5px;
 }
 
 textarea {
@@ -304,9 +319,10 @@ textarea {
 	#burger {
 		display: block;
 		position: absolute;
-		top: 10px;
+		top: 20px;
 		right: 10px;
 		cursor: pointer;
+		width: 30px;
 	}
 
 	.mobile-profile-menu {
