--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,6 +51,8 @@
 
 </div>
 <div data-state="closed" id="show-hide-filters">Hide filters</div>
+<div class="prev-next"></div>
 <div class="request-list"></div>
+<div class="prev-next"></div>
 
 <% include footer %>
