--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,6 +3,7 @@
 <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js" integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E=" crossorigin="anonymous"></script>
 <script src="/js/jquery.datetimepicker.full.min.js"></script>
 <script src="/js/underscore.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
 <script src="/js/main.js"></script>
 </body>
 </html>
