--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,6 +51,7 @@
 
 </div>
 <div data-state="closed" id="show-hide-filters">Hide filters</div>
+<div class="now-loading"><img src="/images/ajax_loading.gif"></div>
 <div class="prev-next"></div>
 <div class="request-list"></div>
 <div class="prev-next"></div>
