--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -22,11 +22,11 @@
 	<div class="profile-body">
 		<!-- Normal profile menu -->
 		<div class="normal-profile-menu">
-			<div class="button-profile proftab profile-tab">Profile</div><div class="button-profile proftab requests-tab">Requests</div><div class="button-profile proftab services-tab">Services</div><div class="button-profile proftab messages-tab">Messages</div><div class="button-profile proftab ratings-tab">Ratings</div>
+			<div class="button-profile proftab profile-tab">Profile</div><div class="button-profile proftab requests-tab">Requests</div><div class="button-profile proftab services-tab">Services</div><div class="button-profile proftab messages-tab ms-normal">Messages</div><div class="button-profile proftab ratings-tab">Ratings</div>
 		</div>
 		<!-- Mobile profile menu -->
 		<div class="mobile-profile-menu">
-			<div class="button-profile proftab profile-tab"><img src="/images/user.png" height="20px"></div><div class="button-profile proftab requests-tab"><img src="/images/request.png" height="20px"></div><div class="button-profile proftab services-tab"><img src="/images/services.png" height="20px"></div><div class="button-profile proftab messages-tab"><img src="/images/messages.png" height="20px"></div><div class="button-profile proftab ratings-tab"><img src="/images/ratings.png" height="20px"></div>
+			<div class="button-profile proftab profile-tab"><img src="/images/user.png" height="20px"></div><div class="button-profile proftab requests-tab"><img src="/images/request.png" height="20px"></div><div class="button-profile proftab services-tab"><img src="/images/services.png" height="20px"></div><div class="button-profile proftab messages-tab ms-mobile"><img src="/images/messages.png" height="20px"></div><div class="button-profile proftab ratings-tab"><img src="/images/ratings.png" height="20px"></div>
 		</div>
 		<div class="now-loading"><img src="/images/ajax_loading.gif"></div>
 		<h3 id="title-profile-section"></h3>
