--- a/views/css/main.css
+++ b/views/css/main.css
@@ -146,6 +146,14 @@ input[type="submit"]{
 	padding: 5px;
 }
 
+#btn-send-loading {
+	display: none;
+}
+
+#btn-send-message {
+
+}
+
 .prevnext {
 	padding: 5px;
 	min-width: 50px;
@@ -209,6 +217,15 @@ input[type="submit"]{
 	margin-left: auto;
 	max-width: 80%;
 	text-align: right;
+}
+
+.messages-indicator {
+	display: inline-block;
+	background-color: #AF4B4B;
+	border-radius: 50%;
+	font-size: 10px;
+	padding: 3px 5px 1px 4px;
+	font-family: "Lucida Console", Monaco, monospace;
 }
 
 #show-hide-filters {
@@ -300,7 +317,7 @@ textarea {
 
 
 /* mobile */
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 570px) {
 	nav {
 		display : none;
 	}
@@ -321,7 +338,7 @@ textarea {
 	}
 
 	.proftab {
-		padding: 7px 0 4px 0;
+		padding: 8px 0 5px 0;
 	}
 
 	h1 {
