--- a/views/account-login.ejs
+++ b/views/account-login.ejs
@@ -8,7 +8,9 @@
     <input type="password" name="password" required>
     <p><input class="button" type="submit" value="Log in"></p>
 </form>
-<p><a href="/auth/facebook" class="fb_connect">Connect with Facebook</a></p>
-<p>Don't have an account yet? <a href="/auth/account-create">Create a new account</a>.</p>
+<div class="request-container">
+<a href="/auth/facebook" class="fb-connect"><img class="fb-logo" src="/images/fb-logo.png" width="20px">Log in with Facebook</a>
+<p class="small">If you don't have an account on help-expat-berlin yet, it will be automatically created.</p>
+</div>
 
 <% include footer %>
