--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,10 @@
 	    </select>
     </div>
 <% if (!user) { %>
-	<p class="small tiplogin"><a href="/auth/facebook">Log in</a> to automatically save your filters</p>
+	<p class="small tiplogin">You are logged out. <a href="/auth/facebook">Log in</a> to automatically save your filters</p>
+	<a href="/auth/facebook" class="fb-connect-small"><img class="fb-logo-small" src="/images/fb-logo.png" width="15px">Log in with Facebook</a>
+<% } else { %>
+	<p class="small tiplogin">You are logged in as <b><%= user.username %></b>. <a href="/auth/logout">Sign out</a>.</p>	
 <% } %>
 </form>
 
