--- a/views/account-login.ejs
+++ b/views/account-login.ejs
@@ -9,7 +9,7 @@
     <p><input class="button" type="submit" value="Log in"></p>
 </form>
 <div class="request-container">
-<a href="/auth/facebook" class="fb-connect"><img class="fb-logo" src="/images/fb-logo.png" width="20px">Log in with Facebook</a>
+<a href="/auth/facebook" class="fb-connect"><img class="fb-logo" src="/images/fb-logo.png" width="20px">Connect with Facebook</a>
 <p class="small">If you don't have an account on help-expat-berlin yet, it will be automatically created.</p>
 </div>
 
