--- a/views/account-create.ejs
+++ b/views/account-create.ejs
@@ -13,3 +13,15 @@
 <a title ="Your account will be created automatically. Your personal data will not be used or displayed." href="/auth/facebook" class="fb_connect">Create an account with Facebook</a>
 
 <% include footer %>
+
+
+<!-- Login disabled 
+<form id="login-form" method="post" action="/auth/login">
+    <h2>Login </h2>
+    <label for="email">Email</label>
+    <input type="email" name="email" required>
+    <label for="password">Password</label>
+    <input type="password" name="password" required>
+    <p><input class="button" type="submit" value="Log in"></p>
+</form>
+-->
