--- a/views/about.ejs
+++ b/views/about.ejs
@@ -44,7 +44,7 @@
 					Communicate with the requester using messages. From there on, it is up to you to reveal any personal information or not.
 				</li>
 				<li>
-					Help Expat Berlin does not take care of, or ensure, any payment, if the service requires one. It is only a platform designed to put people in contact with each other.
+					<em>Help Expat Berlin does not take care of, or guarantee, any payment</em>, if the requester offers one. It is only a platform designed to put people in contact with each other.
 				</li>
 				<li>
 					The requester can then close their request and choose to rate you, based on their satisfaction. Once done, you can rate them back in the <em>Services</em> section of your <em>Profile</em> dashboard.
@@ -56,6 +56,9 @@
 			<ul>
 				<li>
 					Make sure you are logged in. Click on <em>New request</em> and fill in the form with as many information as possible. Make the description clear. <em>DO NOT</em> enter any personal information in the description and title fields.
+				</li>
+				<li>
+					You can choose to offer payment for the service. <em>Help Expat Berlin does not take care of, or guarantee, any payment</em>, if the requester offers one. It is only a platform designed to put people in contact with each other. It is up to the users to arrange payment on their own terms.
 				</li>
 				<li>
 					Once submitted, your request is made public. You can choose to delete it at any point in your Profile dashboard.
