--- a/views/about.ejs
+++ b/views/about.ejs
@@ -26,7 +26,7 @@
 		<div class="request-container">
 			<ul>
 				<li>
-					Log in and browse through the requests list to find a service you are fit to provide. Use the filters if needed. When you are logged in, your filters are saved automatically.
+					Log in first, and browse through the requests list to find a service you are fit to provide. Use the filters if needed. When you are logged in, your filters are saved automatically.
 				</li>
 				<li>
 					Once you have found a service you can contribute to, click on <em>Propose Help</em>.
