--- a/views/account-login.ejs
+++ b/views/account-login.ejs
@@ -1,5 +1,21 @@
 <% include head %>
 
+<div class="request-container small">
+	<p>This is the <b>test version</b> of Help Expat Berlin. Please feel free to login as one of the users below and experiment with the website's functionalities as much as you want.</p>
+	<p class="inline">
+		<b>email</b>: testuser1@test.com<br>
+		<b>password</b>: test
+	</p>
+	<p class="inline">
+		<b>email</b>: testuser2@test.com<br>
+		<b>password</b>: test
+	</p>
+	<p class="inline">
+		<b>email</b>: testuser3@test.com<br>
+		<b>password</b>: test
+	</p>
+</div>
+
 <form id="login-form" method="post" action="/auth/login">
     <h2>Login </h2>
     <label for="email">Email</label>
