--- a/views/account-login.ejs
+++ b/views/account-login.ejs
@@ -1,26 +1,26 @@
 <% include head %>
 
 <div class="request-container small">
-	<p>This is the <b>test version</b> of Help Expat Berlin. Please feel free to login as one of the users below and experiment with the website's functionalities as much as you want.</p>
-	<p class="inline">
-		<b>email</b>: testuser1@test.com<br>
-		<b>password</b>: test
+	<p>This is the <b>test version</b> of Help Expat Berlin. Please feel free to log in using one of the credentials set below and experiment with the website's functionalities as much as you want.</p>
+	<p class="test-login inline">
+		<img src="images/email-icon.png" width="12px"> <input onClick="this.setSelectionRange(0, this.value.length)" value="testuser1@test.com" readonly /><br>
+		<img src="images/password-icon.png" width="12px"> <input onClick="this.setSelectionRange(0, this.value.length)" value="test" readonly />
 	</p>
-	<p class="inline">
-		<b>email</b>: testuser2@test.com<br>
-		<b>password</b>: test
+	<p class="test-login inline">
+		<img src="images/email-icon.png" width="12px"> <input onClick="this.setSelectionRange(0, this.value.length)" value="testuser2@test.com" readonly /><br>
+		<img src="images/password-icon.png" width="12px"> <input onClick="this.setSelectionRange(0, this.value.length)" value="test" readonly />
 	</p>
-	<p class="inline">
-		<b>email</b>: testuser3@test.com<br>
-		<b>password</b>: test
+	<p class="test-login inline">
+		<img src="images/email-icon.png" width="12px"> <input onClick="this.setSelectionRange(0, this.value.length)" value="testuser3@test.com" readonly /><br>
+		<img src="images/password-icon.png" width="12px"> <input onClick="this.setSelectionRange(0, this.value.length)" value="test" readonly />
 	</p>
 </div>
 
 <form id="login-form" method="post" action="/auth/login">
     <h2>Login </h2>
-    <label for="email">Email</label>
+    <label for="email"><img src="images/email-icon.png" width="20px"></label>
     <input type="email" name="email" required>
-    <label for="password">Password</label>
+    <label for="password"><img src="images/password-icon.png" width="20px"></label>
     <input type="password" name="password" required>
     <p><input class="button" type="submit" value="Log in"></p>
 </form>
