--- a/views/account-login.ejs
+++ b/views/account-login.ejs
@@ -1,7 +1,7 @@
 <% include head %>
 
 <div class="request-container small">
-	<p>This is the <b>test version</b> of Help Expat Berlin. Please feel free to log in using one of the credentials set below and experiment with the website's functionalities as much as you want.</p>
+	<p>This is the <b>TEST VERSION</b> of Help Expat Berlin. Please feel free to log in using one of the credentials set below and experiment with the website's functionalities as much as you want.</p>
 	<p class="test-login inline">
 		<img src="images/email-icon.png" width="12px"> <input onClick="this.setSelectionRange(0, this.value.length)" value="testuser1@test.com" readonly /><br>
 		<img src="images/password-icon.png" width="12px"> <input onClick="this.setSelectionRange(0, this.value.length)" value="test" readonly />
