--- a/views/newrequest.ejs
+++ b/views/newrequest.ejs
@@ -3,7 +3,7 @@
 <form name="login-form" id="login-form" method="post" action="/request/new">
     <h2>Post a new request</h2>
     <label for="type">Type</label>
-    <select name="type" required>
+    <select name="type" id="type" required>
         <option value="">---</option>
         <option value="On site Assistance">On site Assistance</option>
         <option value="Translation">Translation</option>
@@ -11,7 +11,7 @@
         <option value="Other">Other</option>
     </select>
     <label for="location">Area</label>
-    <select name="location" required>
+    <select name="location" id="location" required>
         <option value="">---</option>
         <option value="Charlottenburg">Charlottenburg</option>
         <option value="Friedrichshain">Friedrichshain</option>
@@ -25,19 +25,19 @@
         <option value="Other">Other</option>
     </select>
     <label for="title">Title</label>
-    <input class="title" type="text" name="title"  maxlength="40" required>
-    <label for="dateevent">Date</label>
-    <input  class="date" id="datepicker" type="dateTime" name="dateevent">
+    <input id="title" type="text" name="title" maxlength="40" required>
+    <label for="datepicker">Date</label>
+    <input class="dateevent" id="datepicker" type="dateTime" name="dateevent">
     <label for="price">Price</label>
-    <input class="price" type="number" size="10" name="price"> €
+    <input id="price" type="number" size="10" name="price"> €
     <label for="rate">Rate</label>
-    <select name="rate">
+    <select name="rate" id="rate">
     	<option value="">---</option>
     	<option value="flat">flat</option>
     	<option value="perhour">per hour</option>
     </select>
     <label for="description">Description</label>
-    <textarea name="description" rows="5" placeholder="Please provide a description of the service you are looking for" required></textarea>
+    <textarea name="description" id="description" rows="5" placeholder="Please provide a description of the service you are looking for" required></textarea>
     <p><input class="button" type="submit" value="Submit"></p>
 </form>
 
