--- a/views/account-login.ejs
+++ b/views/account-login.ejs
@@ -1,9 +1,11 @@
 <% include head %>
-
-<form id="login-form" method="post" action="/auth/login">
+	<div class="test-site-warning">
 	<p><img src="images/alert-icon.png" width="40px"></p>
 	<p>This is the <b>TEST VERSION</b> of Help Expat Berlin.</p>
-	<p class="small">A random test account has been selected for you.</p><p class="small">Just click <em>Log in</em> and feel free to experiment with the website's functionalities as much as you want.</p>
+	<p class="small">A random testing account has been selected for you.</p><p class="small">Just click <em>Log in</em> and feel free to experiment with the website's functionalities as much as you want.</p>
+	</div>
+
+<form id="login-form" method="post" action="/auth/login">
     <h2>Login </h2>
     <label for="emailinput"><img src="images/email-icon.png" width="20px"></label>
     <input id="emailinput" type="email" name="email" required readonly>
