--- a/views/head.ejs
+++ b/views/head.ejs
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
     <link href="/css/normalize.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet">
     <link href="/css/jquery.datetimepicker.css" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
