--- a/views/head.ejs
+++ b/views/head.ejs
@@ -2,17 +2,17 @@
 <html>
 <head>
 	<title>HEB<% if (user) { %> - <%= user.username %><% } %></title>
-	
+
 	<meta name="description" content="Get help from fellow berliners" />
 
 	<!-- Responsive viewport tag, tells small screens that it's responsive -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+
     <link href="/css/normalize.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet">
     <link href="/css/jquery.datetimepicker.css" rel="stylesheet">
-    <link href="/css/main.css" rel="stylesheet">
+    <link href="/css/main.min.css" rel="stylesheet">
 </head>
 <body>
 <header>
