--- a/views/css/main.scss
+++ b/views/css/main.scss
@@ -1,7 +1,7 @@
 // scheme
 $color1: #9cb7c9; // content
-$color2: #1f3b58; // header
-$color3: #f1e1cd; // clickable
+$color2: #3b537a; // header
+$color3: #ebd0ae; // clickable
 
 // header
 $header-background: $color2;
@@ -15,13 +15,11 @@ $error-banner-text: #B42020;
 $alert-banner-background: #D0D2FF;
 $alert-banner-text: #3B3B93;
 
-// 0 1px 3px 0 rgba(0,0,0,0.25)
-
 // general
 $border-color: #ebe7e7;
 $general-background: lighten($color1, 25%);
-$chat-message-other: #EFF2DC;
-$chat-message-mine: #DAF4DB;
+$chat-message-other: lighten($color2, 40%);
+$chat-message-mine: lighten($color2, 50%);
 $message-indicator: #AF4B4B;
 $form-elements-border-color: $border-color;
 $form-elements-background-color: lighten($color1, 28%);
@@ -34,7 +32,7 @@ $fb-color: #3b5998;
 $container-background: lighten($color1, 30%);
 $title-request-container-background: darken($container-background, 1%);
 $comment-background: $title-request-container-background;
-$clickable-element: darken($color3, 10%);
+$clickable-element: lighten($color3, 10%);
 
 // about section
 $about-background: #F3F6E9;
@@ -61,9 +59,9 @@ $button-revoke-background: #69333B;
 }
 
 html {
-	//font-family: 'Roboto', sans-serif;
 	font-family: Arial, sans-serif;
 	min-height: 100vh;
+	box-sizing: border-box;
 }
 
 body {
@@ -77,6 +75,7 @@ body {
 }
 
 header {
+	font-family: 'Roboto', sans-serif;
 	background-color: $header-background;
     position: fixed;
     width: 100%;
@@ -85,7 +84,29 @@ header {
     //background-image: url("/images/berlin.png");
   	background-size: cover;
   	background-position: center;
-	box-shadow: 0 1px 3px 0 rgba(0,0,0,0.5);
+}
+
+nav {
+	text-align: center;
+	background-color: $nav-background;
+	box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.5);
+}
+
+nav a {
+	display: inline-block;
+	padding: 20px;
+	color: $nav-link;
+    text-decoration: none;
+	&:hover{
+		background-color: $nav-link-hover;
+		z-index: 10;
+	}
+}
+
+h1 {
+	padding: 30px;
+	margin: 0px;
+	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.5);
 }
 
 .header-push {
@@ -170,27 +191,6 @@ em {
 	padding-bottom: 1px;
 }
 
-nav {
-	text-align: center;
-	background-color: $nav-background;
-}
-
-nav a {
-	display: inline-block;
-	padding: 20px;
-	color: $nav-link;
-    text-decoration: none;
-}
-
-nav a:hover {
-	background-color: $nav-link-hover;
-}
-
-h1 {
-	padding: 30px;
-	margin: 0px;
-}
-
 .no-lb {
 	margin: 0;
 	padding: 0;
@@ -211,7 +211,6 @@ h1 {
 }
 
 .request-container {
-	@include border-radius(3px);
 	@include border(#bbb);
 	background-color: $container-background;
 	margin-top: 10px;
@@ -265,7 +264,7 @@ input[type="submit"]{
 	cursor: pointer;
 	min-width: 150px;
 	font-weight: normal;
-	margin: 10px;
+	margin-bottom: 20px;
 }
 
 .button-help {
@@ -277,8 +276,10 @@ input[type="submit"]{
 	background-color: $clickable-element;
 	padding: 5px;
 	margin: 0;
-	border-radius: 0px 0px 3px 3px;
 	cursor: pointer;
+    &:hover {
+        background-color: darken($clickable-element, 5%);
+    }
 }
 
 #btn-send-loading {
@@ -290,14 +291,22 @@ input[type="submit"]{
 }
 
 .prevnext {
+	@include border(#bbb);
+	color: black;
 	padding: 5px;
+	height: 25px;
+	line-height: 30px;
+	vertical-align: middle;
 	min-width: 50px;
 	background-color: $clickable-element;
 	margin: 0;
+    &:hover {
+        background-color: darken($clickable-element, 5%);
+    }
 }
 
 .prev-next {
-	min-height: 30px;
+	min-height: 35px;
 }
 
 .button-revokehelp {
@@ -359,12 +368,23 @@ input[type="submit"]{
 	font-family: "Lucida Console", Monaco, monospace;
 }
 
+form {
+	@include border(#bbb);
+	display: inline-block;
+	min-width: 500px;
+	background-color: $container-background;
+	padding: 10px;
+	margin: 5px 0 5px 0;
+	border-radius: 10px;
+}
+
 #filters {
 	@include border(#aaa);
 	margin-bottom: 10px;
 }
 
 #filters-form {
+	display: block;
 	background-color: $container-background;
 	margin: 0px;
 	border-radius: 0px;
@@ -374,13 +394,9 @@ input[type="submit"]{
 	background-color: $clickable-element;
 	padding: 5px;
 	cursor: pointer;
-}
-
-form {
-	background-color: $container-background;
-	padding: 10px;
-	margin: 5px 0 5px 0;
-	border-radius: 10px;
+    &:hover {
+        background-color: darken($clickable-element, 5%);
+    }
 }
 
 label {
@@ -389,8 +405,7 @@ label {
 }
 
 select, input, textarea {
-	border: 1px solid;
-	border-color: $form-elements-border-color;
+	border: 1px solid $form-elements-border-color;
 	background-color: $form-elements-background-color;
 	padding: 2px 5px 2px 5px;
 	border-radius: 4px;
@@ -411,7 +426,40 @@ input[type="number"] {
 	padding: 10px;
 }
 
+.small {
+	font-size: 13px;
+	margin: 0;
+	padding: 5px;
+}
+
+.author-container {
+	box-sizing: border-box;
+	display: inline-block;
+	text-align: left;
+	width: 50%;
+	padding-left: 20px;
+	padding-bottom: 10px;
+}
+
+.details-less-container {
+	box-sizing: border-box;
+	display: inline-block;
+	text-align: right;
+	padding-right: 20px;
+	padding-bottom: 10px;
+	width: 50%;
+}
+
+.details-more-container {
+	display: block;
+	text-align: right;
+	padding-right: 20px;
+	padding-bottom: 10px;
+	margin-top: -5px;
+}
+
 .tiplogin {
+	display: block;
 	max-width: 400px;
 	padding-top: 5px;
 	padding-bottom: 5px;
@@ -441,14 +489,10 @@ textarea {
 	background-color: $comment-background;
     font-style: none;
     padding: 10px;
-	max-width: 600px;
+	max-width: 90%;
 	border-radius: 5px;
-	margin: 0 auto 0 auto;
+	margin: 0 auto 20px auto;
 	border: 1px solid $border-color;
-}
-
-.small {
-	font-size: 13px;
 }
 
 .floatright {
