addd darker bkcolor to fb-login div

--- a/views/css/main.scss
+++ b/views/css/main.scss
@@ -426,7 +426,7 @@ form {
     margin-bottom: 10px;
 }
 
-#login-form {
+#login-form, .fb-login-request {
     border: 0;
     max-width: 500px;
     margin: 0 auto 0 auto;
