corrected landing page

--- a/views/account-login.ejs
+++ b/views/account-login.ejs
@@ -1,10 +1,19 @@
 <% include head %>
 
-<div class="test-site-warning">
-<p><img src="images/alert-icon.png" width="40px"></p>
-<p>This is the <b>TEST VERSION</b> of Help Expat Berlin.</p>
-<p class="small">A random testing account has been selected for you.</p><p class="small">Just click <em>Log in</em> and feel free to experiment with the website's functionalities as much as you want.</p>
-</div>
+  <div class="request-container site-intro-warning">
+    <p>
+      Living in a foreign country is an amazing and enriching experience. But not speaking fluently its language can be daunting at times, and Berlin is no exception. From a simple phone call to an important appointement, obtaining valuable help can be a life-saver.
+    </p>
+    <p>
+      Help Expat Berlin is a website that lets users obtain or provide help to each others for administrative tasks, or any service that could require the help of a native or experienced german in Berlin.
+    </p>
+
+    <div class="test-site-warning">
+      <p><img src="images/alert-icon.png" width="40px"></p>
+      <p>This is the <b>TEST VERSION</b> of Help Expat Berlin.</p>
+      <p class="small">A random testing account has been selected for you.</p><p class="small">Just click <em>Log in</em> and feel free to experiment with the website's functionalities as much as you want.</p>
+    </div>
+  </div>
 
 <form id="login-form" method="post" action="/auth/login">
     <h2>Login </h2>
