--- a/views/css/main.scss
+++ b/views/css/main.scss
@@ -573,6 +573,12 @@ textarea {
 	display: none;
 }
 
+.site-intro-warning {
+  margin: 0 auto 20px auto;
+	padding: 20px;
+	max-width: 600px;
+}
+
 
 /* mobile */
 @media only screen and (max-width: 570px) {
